stateDiagram-v2
    state hasSpace <<choice>>
    state canKick <<choice>>
    state gameReady <<choice>>
    [*] --> LOBBY_INIT: CREATE_GAME (gameId, playerId, isHost)
    LOBBY --> hasSpace: PLAYER_JOINING (gameId, playerId)
    hasSpace --> JOIN_REQUEST: and(isEqual(#gameId,$gameId),has_player_slots(#playerReadyMap,#maxPlayers))
    LOBBY_INIT --> LOBBY: [-]
    LOBBY --> EXTERNAL_UPDATE: UPDATE (playerReadyMap)
    LOBBY-->canKick: KICK (playerId)
    canKick-->KICK_PLAYER: and(has(#playerReadyMap,$playerId),isEqual(#isHost,1))
    KICK_PLAYER-->gameReady: [-]
    LOBBY --> READY_STATE_CHANGE: READY
    READY_STATE_CHANGE --> gameReady: [-]
    EXTERNAL_UPDATE --> gameReady: [-]
    JOIN_REQUEST --> gameReady: [-]
    gameReady --> GAME_STARTING: game_ready(#playerReadyMap)
    gameReady --> LOBBY
    hasSpace -->LOBBY
    canKick --> LOBBY
    GAME_STARTING-->IN_GAME: LAUNCH

note left of [*]
define/emptyMap () => zip([],[])
define/resetMap (players) => zip(players,repeat(0, len(players)))
define/has_player_slots (map, maxPlayers) => isGreater(maxPlayers,len(keys(map)))
define/game_ready (map) => isEqual(len(keys(map)),sum(values(map)))
end note

note right of [*]
#{playerId, gameId, playerReadyMap = emptyMap(), hostPlayerId, maxPlayers = 7, readyState = 0}
subscribe/lobby_created CREATE_GAME ($gameId, $playerId, $isHost = 1)
subscribe/join_game_request PLAYER_JOINING ($gameId, $playerId)
subscribe/player_state_change UPDATE ($playerReadyMap)
subscribe/game_start LAUNCH
end note

note right of LOBBY_INIT
+ByPass
#{gameId, hostPlayerId = 0} <= $gameId, if(isEqual($isHost,1), $playerId, #hostPlayerId)
#{playerReadyMap} <= setAttr(#playerReadyMap,$playerId,0)
end note

note right of JOIN_REQUEST
+ByPass
#{playerReadyMap} <= setAttr(#playerReadyMap,$playerId,0)
emit/request_accepted ($game_id)
end note

note right of KICK_PLAYER
+ByPass
#{playerReadyMap} <= resetMap(omit(keys(#playerReadyMap),$playerId))
end note

note right of READY_STATE_CHANGE
+ByPass
#{playerReadyMap, readyState} <= setAttr(#playerReadyMap, #playerId, 1), 1
emit/player_state_change ($game_id, $playerReadyMap)
end note

note right of EXTERNAL_UPDATE
+ByPass
#{playerReadyMap} <= $playerReadyMap
end note

note right of GAME_STARTING
emit/game_start (#gameId, #playerIds) <= #{gameId, playerIds = keys(#playerReadyMap)}
end note
